--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test:e2e": "npx playwright test tests/",
-    "test:e2e:all": "npx playwright test tests --project=all-browsers-and-tests",
+  "test:e2e:all": "npx playwright test tests --project=all-browsers-and-tests-chromium --project=all-browsers-and-tests-webkit --project=all-browsers-and-tests-firefox",
     "test:e2e:ci": "CI=1 npx playwright test --project=ci --shard=$CI_NODE_INDEX/$CI_NODE_TOTAL",
     "test:e2e:dev": "npx playwright test tests-examples/ --project=chromium --headed --retries=0 --reporter=line",
     "test:e2e:smoke": "npx playwright test tests-examples/ --grep @smoke --project=chromium",
     "test:e2e:non-smoke": "npx playwright test tests-examples/ --grep-invert @smoke --project=firefox",
     "test:visual:acme": "npx playwright test example-applitools.spec.ts --project=chromium",
-    "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests"
+  "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests-chromium --project=all-browsers-and-tests-webkit --project=all-browsers-and-tests-firefox"
   },
   "keywords": [],
   "author": "",
