--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
   "name": "tau-introduction-to-playwright",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hi 👋🏽!",
   "main": "index.js",
   "scripts": {
     "test:e2e": "npx playwright test tests/",
-  "test:e2e:all": "npx playwright test tests --project=all-browsers-and-tests-chromium --project=all-browsers-and-tests-webkit --project=all-browsers-and-tests-firefox",
+    "test:e2e:all": "npx playwright test tests --project=all-browsers-and-tests-chromium --project=all-browsers-and-tests-webkit --project=all-browsers-and-tests-firefox",
     "test:e2e:ci": "CI=1 npx playwright test --project=ci --shard=$CI_NODE_INDEX/$CI_NODE_TOTAL",
     "test:e2e:dev": "npx playwright test tests-examples/ --project=chromium --headed --retries=0 --reporter=line",
     "test:e2e:smoke": "npx playwright test tests-examples/ --grep @smoke --project=chromium",
     "test:e2e:non-smoke": "npx playwright test tests-examples/ --grep-invert @smoke --project=firefox",
     "test:visual:acme": "npx playwright test example-applitools.spec.ts --project=chromium",
-  "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests-chromium --project=all-browsers-and-tests-webkit --project=all-browsers-and-tests-firefox"
+    "test:visual:playwright": "npx playwright test example3.spec.ts --project=all-browsers-and-tests-chromium --project=all-browsers-and-tests-webkit --project=all-browsers-and-tests-firefox"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@applitools/eyes-playwright": "^1.17.0",
-    "@playwright/test": "^1.34.2",
-    "dotenv": "^16.0.3"
-  }
+    "@playwright/test": "^1.56.1",
+    "@types/node": "^24.9.1",
+    "dotenv": "^16.0.3",
+    "typescript": "^4.9.5"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/n0ferz/tau-introduction-to-playwright.git"
+  },
+  "bugs": {
+    "url": "https://github.com/n0ferz/tau-introduction-to-playwright/issues"
+  },
+  "homepage": "https://github.com/n0ferz/tau-introduction-to-playwright#readme"
 }
